fix(cv): correct sub-position dot alignment to sit on the timeline border
Affected: _sass/_timeline.scss

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -32,15 +32,16 @@
 // Sub-positions (LinkedIn-style promotion list)
 .sub-positions {
   position: relative;
-  padding-left: 20px;
-  margin: 10px 0;
-  border-left: 2px solid #ccc;
+  margin-left: 6px;
+  padding-left: 24px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-left: 2px solid #999;
 }
 
 .sub-position {
   position: relative;
-  padding-left: 15px;
-  padding-bottom: 12px;
+  padding-bottom: 14px;
 
   &:last-child {
     padding-bottom: 0;
@@ -49,12 +50,13 @@
   &::before {
     content: '';
     position: absolute;
-    left: -7px;
+    left: -31px;
     top: 6px;
     width: 12px;
     height: 12px;
-    background-color: #ccc;
+    background-color: #999;
     border-radius: 50%;
+    z-index: 1;
   }
 }
 
